--- a/CV/ZishuoZhao-CV.lyx
+++ b/CV/ZishuoZhao-CV.lyx
@@ -493,7 +493,7 @@ Personal Statement
 \begin_layout Standard
 I am a senior student in IIIS Tsinghua.
  During high-school and college years I am interested in mathematics and
- computer science, and in college years, I intended to do research in especially
+ computer science, and in college years, I have always been interested in
  fields with deep association with mathematics.
 \end_layout
 
@@ -513,16 +513,10 @@ Because of the variety of courses I have taken, and after the visiting program
  in UT Austin, I am now interested in a wide range of scopes, including
  geometry/topology/graphics, statistics/information theory, as well as optimizat
 ion/machine learning theory.
- In future years, I look forward to utilizing extensive knowledge to do
- interdisciplinary research with a solid mathematical background, especially
- in fields combining graphics and data science/machine learning.
-\end_layout
-
-\begin_layout Standard
-During the graduation project in Tsinghua CG Lab, advised by Shi-Min Hu,
+ During the graduation project in Tsinghua CG Lab, advised by Shi-Min Hu,
  I developed particular interest in the area of computer vision in the geometric
- perspective, and now I look forward to do further research in the fields
- that combine mathematical/physical models and data processing.
+ perspective, and now I look forward to do further interdisciplinary research
+ in the fields that combine mathematical/physical models and data processing.
 \end_layout
 
 \begin_layout Section
@@ -595,7 +589,7 @@ Graded A(
 \begin_layout Itemize
 \begin_inset CommandInset href
 LatexCommand href
-name "arXiv:1907.06441"
+name "[arXiv:1907.06441]"
 target "https://arxiv.org/pdf/1907.06441.pdf"
 literal "false"
 
@@ -691,6 +685,15 @@ Innovative work based on observations and explorations.
 LatexCommand href
 name "[Source Code]"
 target "https://github.com/wiku30/Musical_Instrument_Classification"
+literal "false"
+
+\end_inset
+
+
+\begin_inset CommandInset href
+LatexCommand href
+name "[arXiv:1909.08444]"
+target "https://arxiv.org/pdf/1909.08444.pdf"
 literal "false"
 
 \end_inset
@@ -912,7 +915,7 @@ literal "false"
 \align right
 
 \emph on
-(Updated on Sept 16, 2019)
+(Updated on Sept 19, 2019)
 \end_layout
 
 \end_body
