--- a/CV/ZishuoZhao-CV.lyx
+++ b/CV/ZishuoZhao-CV.lyx
@@ -165,6 +165,18 @@ Major GPA: 3.76/4
 \end_layout
 
 \begin_layout Itemize
+Honors: 
+\begin_inset Newline newline
+\end_inset
+
+Yao Class Student Fellowship, 2016~2020.
+\begin_inset Newline newline
+\end_inset
+
+Award for Arts Excellence, 2018.
+\end_layout
+
+\begin_layout Itemize
 Grades of Selected Courses:
 \begin_inset Newline newline
 \end_inset
