--- a/CV/ZishuoZhao-CV.lyx
+++ b/CV/ZishuoZhao-CV.lyx
@@ -91,7 +91,7 @@ Zishuo ZHAO
 
 \begin_layout Standard
 \align center
-zzs15@mails.tsinghua.edu.cn, i@w.wiku30.xyz
+zzs15@tsinghua.org.cn, zishuoz2@illinois.edu
 \end_layout
 
 \begin_layout Standard
@@ -987,7 +987,7 @@ literal "false"
 \align right
 
 \emph on
-(Updated on Jun 10, 2020)
+(Updated on Sept 4, 2020)
 \end_layout
 
 \end_body
