--- a/CV/ZishuoZhao-CV.lyx
+++ b/CV/ZishuoZhao-CV.lyx
@@ -182,6 +182,7 @@ Publications
 
 \series bold
 Dynamic Car Dispatching and Pricing: Revenue and Fairness for Ridesharing
+ Platforms
 \end_layout
 
 \begin_layout Standard
@@ -225,6 +226,7 @@ Talks
 
 \series bold
 Dynamic Car Dispatching and Pricing: Revenue and Fairness for Ridesharing
+ Platforms
 \end_layout
 
 \begin_layout Standard
