--- a/CV/ZishuoZhao-CV.lyx
+++ b/CV/ZishuoZhao-CV.lyx
@@ -180,8 +180,19 @@ I also have an interest in Capture-The-Flag(CTF) competitions, especially
 Research
 \end_layout
 
-\begin_layout Subsection
-Publications
+\begin_layout Standard
+
+\series bold
+Bayesian-Nash-Incentive-Compatible Mechanism for Blockchain Transaction
+ Fee Allocation
+\end_layout
+
+\begin_layout Standard
+Zishuo Zhao, Xi Chen, Yuan Zhou
+\end_layout
+
+\begin_layout Standard
+Accepted for CESC 2022.
 \end_layout
 
 \begin_layout Standard
@@ -234,8 +245,8 @@ literal "false"
 
 \end_layout
 
-\begin_layout Subsection
-Working Papers
+\begin_layout Section
+Talks
 \end_layout
 
 \begin_layout Standard
@@ -249,8 +260,8 @@ Bayesian-Nash-Incentive-Compatible Mechanism for Blockchain Transaction
 Zishuo Zhao, Xi Chen, Yuan Zhou
 \end_layout
 
-\begin_layout Section
-Talks
+\begin_layout Standard
+Invited to INFORMS Annual Meeting 2022.
 \end_layout
 
 \begin_layout Standard
@@ -265,7 +276,7 @@ Zishuo Zhao, Xi Chen, Xuefeng Zhang, Yuan Zhou
 \end_layout
 
 \begin_layout Standard
-Invited to INFORMS Annual Meeting 2021
+Invited to INFORMS Annual Meeting 2021.
 \end_layout
 
 \begin_layout Section
@@ -337,7 +348,7 @@ Open to learn new programming languages when in need.
 \align right
 
 \emph on
-(Updated on Aug 15, 2022)
+(Updated on Sept 11, 2022)
 \end_layout
 
 \end_body
