--- a/CV/ZishuoZhao-CV.lyx
+++ b/CV/ZishuoZhao-CV.lyx
@@ -151,11 +151,10 @@ Research Interests
 \end_layout
 
 \begin_layout Standard
-I am a second-year PhD student in UIUC, majoring in operations research,
+I am a third-year PhD student in UIUC, majoring in operations research,
  and currently doing research in blockchain mechanism design.
  My research interests also span a wide scope including mechanism design,
- game theory, scheduling, pricing, fair division, algorithm design and cryptogra
-phy.
+ game theory, fair division, algorithm design and cryptography.
  I have an affection for adopting the ideas and tools in theoretical computer
  science into applications of modern research topics including optimization
  and mechanism design.
