--- a/CV/ZishuoZhao-CV.lyx
+++ b/CV/ZishuoZhao-CV.lyx
@@ -156,8 +156,7 @@ I am a third-year PhD student in UIUC, majoring in operations research,
  My research interests also span a wide scope including mechanism design,
  game theory, fair division, algorithm design and cryptography.
  I have an affection for adopting the ideas and tools in theoretical computer
- science into applications of modern research topics including optimization
- and mechanism design.
+ science into applications especially in the field of blockchain systems.
 \end_layout
 
 \begin_layout Standard
@@ -174,6 +173,10 @@ I also have an interest in Capture-The-Flag(CTF) competitions, especially
 
 \begin_layout Section
 Research
+\end_layout
+
+\begin_layout Subsection
+Publications
 \end_layout
 
 \begin_layout Standard
@@ -347,6 +350,25 @@ International Conference on Computer Vision (ICCV 2019).
  
 \end_layout
 
+\begin_layout Subsection
+Working Papers
+\end_layout
+
+\begin_layout Standard
+
+\series bold
+Personalized Pricing with Group Fairness Constraint
+\end_layout
+
+\begin_layout Standard
+Xin Chen, Zexing Xu, 
+\bar under
+Zishuo Zhao
+\bar default
+, Yuan Zhou.
+ (alphabetical order)
+\end_layout
+
 \begin_layout Section
 Academic Activities
 \end_layout
@@ -414,6 +436,11 @@ Extracurricular Activities
 \end_layout
 
 \begin_layout Itemize
+I developed two Reverse challenges in the Capture-The-Flag contest TQLCTF
+ 2022.
+\end_layout
+
+\begin_layout Itemize
 I have an interest in vocal music, and performed singing at Yao Class Carnivals
  in 2016, 2018, 2019, 2020, 2022.
  Particularly in 2022, I performed the anime song 
@@ -421,11 +448,6 @@ I have an interest in vocal music, and performed singing at Yao Class Carnivals
 Carrying You
 \emph default
  of my own version of Chinese translation.
-\end_layout
-
-\begin_layout Itemize
-I developed two Reverse challenges in the Capture-The-Flag contest TQLCTF
- 2022.
 \end_layout
 
 \begin_layout Itemize
@@ -455,7 +477,7 @@ Open to learn new programming languages when in need.
 \align right
 
 \emph on
-(Updated on Dec 4, 2022)
+(Updated on Feb 21, 2023)
 \end_layout
 
 \end_body
