--- a/CV/ZishuoZhao-CV.lyx
+++ b/CV/ZishuoZhao-CV.lyx
@@ -175,6 +175,10 @@ I also have an interest in Capture-The-Flag(CTF) competitions, especially
 Research
 \end_layout
 
+\begin_layout Standard
+* means equal contribution.
+\end_layout
+
 \begin_layout Subsection
 Publications
 \end_layout
@@ -361,11 +365,11 @@ Personalized Pricing with Group Fairness Constraint
 \end_layout
 
 \begin_layout Standard
-Xin Chen, Zexing Xu, 
+Xin Chen*, Zexing Xu*, 
 \bar under
 Zishuo Zhao
 \bar default
-, Yuan Zhou.
+*, Yuan Zhou*.
  (alphabetical order)
 \end_layout
 
