--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -46,9 +46,9 @@ Advisor: Yuan Zhou\\
 Expected Graduation: Summer 2025
 \item \textbf{2020/08 - 2021/01 }Research Assistant, Haihua Institute for
 Frontier Information Technology
-\item \textbf{2016/05 - 2020/07} Undergraduate student, Yao Class, Institute
+\item \textbf{2016/05/12 - 2020/07/24} Undergraduate student, Yao Class, Institute
 for Interdisciplinary Information Sciences, Tsinghua University
-\item \textbf{2015/08 - 2016/05} Undergraduate student, Department of Computer
+\item \textbf{2015/08/19 - 2016/05/11} Undergraduate student, Department of Computer
 Science and Technology, Tsinghua University 
 \end{itemize}
 
