--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -69,7 +69,9 @@ with geometric and topological inspirations.
 I also have an amateur interest in Capture-The-Flag(CTF) competitions,
 especially in Crypto and Reverse.
 
-\section{Publications}
+\section{Research}
+
+\subsection{Publications}
 
 \textbf{Personalized Pricing with Group Fairness Constraint}
 
@@ -116,6 +118,15 @@ Jiahui Huang, Sheng Yang, \uline{Zishuo Zhao}, Yukun Lai, Shi-Min
 Hu.
 
 \emph{International Conference on Computer Vision (ICCV 2019). }
+
+\subsection{Working Projects}
+
+\textbf{Incentive Secure PoUW Design: Economic and Energy Efficiency for Blockchain Systems}
+
+\uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Yuan Zhou
+
+Presented on INFORMS Annual Meeting 2023.
+
 
 \section{Academic Activities}
 \begin{itemize}
@@ -164,6 +175,6 @@ Java, PHP.
 \item Open to learn new programming languages when in need.
 \end{itemize}
 \begin{flushright}
-\emph{(Updated on April 12, 2023)}
+\emph{(Updated on Oct 16, 2023)}
 \par\end{flushright}
 \end{document}
