--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -35,7 +35,7 @@ ISE, University of Illinois Urbana-Champaign
 
 \section{Background}
 \begin{itemize}
-\item \textbf{2023/09 - 2024/08 (Expected)} Visiting Student, Institute for Data Systems and Society, \\
+\item \textbf{2023/09 - 2024/08} Visiting Student, Institute for Data Systems and Society, \\
 Massachusetts Institute of Technology\\
 Advisor: David Simchi-Levi
 \item \textbf{2021/01 - now }PhD student, Department of Industrial \& Enterprise
@@ -46,28 +46,27 @@ Advisor: Yuan Zhou\\
 Expected Graduation: Summer 2025
 \item \textbf{2020/08 - 2021/01 }Research Assistant, Haihua Institute for
 Frontier Information Technology
-\item \textbf{2016/05/12 - 2020/07/24} Undergraduate student, Yao Class, Institute
+\item \textbf{2016/05 - 2020/07} Undergraduate student, Yao Class, Institute
 for Interdisciplinary Information Sciences, Tsinghua University
-\item \textbf{2015/08/19 - 2016/05/11} Undergraduate student, Department of Computer
+\item \textbf{2015/08 - 2016/05} Undergraduate student, Department of Computer
 Science and Technology, Tsinghua University 
 \end{itemize}
 
 \section{Research Interests}
 
 I am a third-year PhD student in UIUC, majoring in operations research,
-and currently doing research in blockchain mechanism design. My research
-interests also span a wide scope including mechanism design, game
-theory, fair division, algorithm design and cryptography. I have an
-affection for adopting the ideas and tools in theoretical computer
-science into applications especially in the field of blockchain systems.
+and currently doing research in mechanism design. In general, my research
+interests span a wide scope related to algorithm and mechanism design for
+emerging applications in internet economics, including blockchain systems,
+e-commerce, ridesharing platforms and so on. I am also interested in data-driven
+mechanism design based on statistical/online learning.
 
-Beside my major, I have an amateur interest in computational geometry
-and topology, which was my research interest during undergraduate
-time. I have always been excited to solve or prove research problems
-with geometric and topological inspirations.
+On a very high level, my (starry-eyed) dream for research lies in the following fields, which are also the two projects I am most actively working on:
 
-I also have an amateur interest in Capture-The-Flag(CTF) competitions,
-especially in Crypto and Reverse.
+\begin{itemize}
+    \item \textbf{AI for mechanism design}: e.g., dynamic auction design based on online learning;
+    \item \textbf{Mechanism design for AI}: e.g., incentive-secure design for proof-of-learning mechanisms in blockchain systems.
+\end{itemize}
 
 \section{Research}
 
@@ -175,6 +174,6 @@ Java, PHP.
 \item Open to learn new programming languages when in need.
 \end{itemize}
 \begin{flushright}
-\emph{(Updated on Oct 16, 2023)}
+\emph{(Updated on Nov 30, 2023)}
 \par\end{flushright}
 \end{document}
