--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -54,7 +54,7 @@ Science and Technology, Tsinghua University
 
 \section{Research Interests}
 
-I am a third-year PhD student in UIUC, majoring in operations research,
+I am a fourth-year PhD student in UIUC, majoring in operations research,
 and currently doing research in mechanism design. In general, my research
 interests span a wide scope related to algorithm and mechanism design for
 emerging applications in internet economics, including blockchain systems,
@@ -174,6 +174,6 @@ Java, PHP.
 \item Open to learn new programming languages when in need.
 \end{itemize}
 \begin{flushright}
-\emph{(Updated on Nov 30, 2023)}
+\emph{(Updated on Jan 30, 2024)}
 \par\end{flushright}
 \end{document}
