--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -169,7 +169,7 @@ Tsinghua University, 2016.
 \subsection{Arts}
 
 \begin{itemize}
-    \item Finalist Award in the ``一盏茶时 (\textit{IIIS Tea Time})'' photography exhibition for the 12th Anniversary of IIIS, Tsinghua University. 
+    \item Finalist Award in the ``一盏茶时 (\textit{IIIS Tea Time})'' photography exhibition for the 12th Anniversary of IIIS, Tsinghua University, 2023. 
     \item Scholarship for Arts Excellence in Tsinghua University, 2018.
     \item Third Prize in the Art Festival of No.1 Middle School affiliated to CCNU, 2013. 
 \end{itemize}
