--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -60,7 +60,7 @@ Science and Technology, Tsinghua University
 
 I am a fourth-year PhD student in UIUC, majoring in operations research,
 and currently doing research in mechanism design. In general, my research
-interests span a wide scope related to algorithm and mechanism design for
+interests span a wide scope related to incentive-aware design and optimization for
 emerging applications in internet economics, including blockchain systems,
 e-commerce, ridesharing platforms and so on. I am also interested in data-driven
 mechanism design based on statistical/online learning, and topics in cryptography and distributed systems with applications in blockchain.
