--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -136,6 +136,12 @@ Presented on INFORMS Annual Meeting 2023.
 
 David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}. (alphabetical order)
 
+\medskip{}
+
+\textbf{Peer Prediction for Verifier's Dilemma}
+
+\emph{(Collaborators TBA)}
+
 
 \section{Academic Activities}
 \begin{itemize}
@@ -196,6 +202,6 @@ Java, PHP.
 \item Open to learn new programming languages when in need.
 \end{itemize}
 \begin{flushright}
-\emph{(Updated on Feb 17, 2024)}
+\emph{(Updated on Mar 13, 2024)}
 \par\end{flushright}
 \end{document}
