--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -61,15 +61,15 @@ Science and Technology, Tsinghua University
 I am a fourth-year PhD student in UIUC, majoring in operations research,
 and currently doing research in mechanism design. In general, my research
 interests span a wide scope related to incentive-aware design and optimization for
-emerging applications in internet economics, including blockchain systems,
+emerging applications in digital economy, including blockchain systems,
 e-commerce, ridesharing platforms and so on. I am also interested in data-driven
 mechanism design based on statistical/online learning, and topics in cryptography and distributed systems with applications in blockchain.
 
-On a very high level, my (starry-eyed) dream for research lies in the following fields, which are also the two projects I am most actively working on:
+On a very high level, my (starry-eyed) dream for research lies in the following two fields, which are also the topics I am most actively working on:
 
 \begin{itemize}
-    \item \textbf{AI for mechanism design}: e.g., dynamic auction design based on online learning;
-    \item \textbf{Mechanism design for AI}: e.g., incentive-secure design for proof-of-learning mechanisms in blockchain systems.
+    \item \textbf{AI for mechanism design}: e.g., using data-driven methods to improve the performance of economic platforms.
+    \item \textbf{Mechanism design for AI}: e.g., using economic incentives to reinforce the efficiency and security of AI systems.
 \end{itemize}
 
 \section{Research}
@@ -202,6 +202,6 @@ Java, PHP.
 \item Open to learn new programming languages when in need.
 \end{itemize}
 \begin{flushright}
-\emph{(Updated on Mar 13, 2024)}
+\emph{(Updated on Mar 16, 2024)}
 \par\end{flushright}
 \end{document}
