--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -15,6 +15,25 @@
 %\usepackage{CJKutf8}
 \usepackage[unicode=true]{hyperref}
 
+%\def\TopicLabel{}
+
+\ifdefined\TopicLabel
+\def\A4M{\large{\tt(A4M)}}
+\def\M4A{\large{\tt(M4A)}}
+\def\EAI{\large{\tt(EAI)}}
+\def\ind#1{\hspace{-3em}#1\hspace{0.36em}}
+\else
+\def\A4M{}
+\def\M4A{}
+\def\EAI{}
+\def\ind#1{}
+\fi
+
+
+\def\iA4M{\ind{\A4M}}
+\def\iM4A{\ind{\M4A}}
+\def\iEAI{\ind{\EAI}}
+
 \makeatletter
 \@ifundefined{date}{}{\date{}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% User specified LaTeX commands.
@@ -24,6 +43,7 @@
 \makeatother
 
 \begin{document}
+
 \title{Zishuo Zhao 赵梓硕}
 \maketitle
 
@@ -50,8 +70,8 @@ Advisor: Yuan Zhou\\
 Expected Graduation: Summer 2025
 \item \textbf{2020/08 - 2021/01 }Research Assistant, Haihua Institute for
 Frontier Information Technology
-\item \textbf{2016/05 - 2020/07} Undergraduate student, Yao Class, Institute
-for Interdisciplinary Information Sciences, Tsinghua University
+\item \textbf{2016/05 - 2020/07} Undergraduate student, Institute
+for Interdisciplinary Information Sciences (Yao Class), Tsinghua University
 \item \textbf{2015/08 - 2016/05} Undergraduate student, Department of Computer
 Science and Technology, Tsinghua University 
 \end{itemize}
@@ -63,20 +83,35 @@ and currently doing research in mechanism design. In general, my research
 interests span a wide scope related to incentive-aware design and optimization for
 emerging applications in digital economy, including blockchain systems,
 e-commerce, ridesharing platforms and so on. I am also interested in data-driven
-mechanism design based on statistical/online learning, and topics in cryptography and distributed systems with applications in blockchain.
+mechanism design based on statistical/online learning, and topics in cryptography 
+and distributed systems with applications in blockchain.
 
-On a very high level, my (starry-eyed) dream for research lies in the following two fields, which are also the topics I am most actively working on:
+On a very high level, my (starry-eyed) dream for research lies in the following 
+two fields, which are also the topics I am most actively working on:
 
 \begin{itemize}
-    \item \textbf{AI for mechanism design}: e.g., using data-driven methods to improve the performance of economic platforms.
-    \item \textbf{Mechanism design for AI}: e.g., using economic incentives to reinforce the efficiency and security of AI systems.
+    \item \textbf{AI for mechanism design\A4M}: e.g., using data-driven methods to 
+    improve the performance of economic platforms.
+    \item \textbf{Mechanism design for AI\M4A}: e.g., using economic incentives to 
+    reinforce the efficiency and security of AI systems.
 \end{itemize}
+
+Additionally, I was interested in geometry-based computer graphics and vision at
+my undergraduate times. Although I no longer focus on that research field, I am
+still happy to discuss about related topics, especially the recently fruitful field of
+embodied AI\EAI
+%, and open to possible future interdisciplinary collaboration after my graduation
+.
+
 
 \section{Research}
 
+%\setlength\parindent{24pt}
+%\hangindent 24pt
+
 \subsection{Publications}
 
-\textbf{Personalized Pricing with Group Fairness Constraint} \href{https://dl.acm.org/doi/10.1145/3593013.3594097}{[Link]}
+\iA4M\textbf{Personalized Pricing with Group Fairness Constraint} \href{https://dl.acm.org/doi/10.1145/3593013.3594097}{[Link]}
 
 Xin Chen{*}, Zexing Xu{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}.
 (alphabetical order)
@@ -86,7 +121,7 @@ Xin Chen{*}, Zexing Xu{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}.
 
 \medskip{}
 
-\textbf{Bayesian Mechanism Design for Blockchain Transaction Fee Allocation}\footnote{A preliminary version of this research has the title ``Bayesian-Nash-Incentive-Compatible
+\iM4A\textbf{Bayesian Mechanism Design for Blockchain Transaction Fee Allocation}\footnote{A preliminary version of this research has the title ``Bayesian-Nash-Incentive-Compatible
 Mechanism for Blockchain Transaction Fee Allocation''} \href{https://arxiv.org/abs/2209.13099}{[Link]}
 
 Xi Chen{*}, David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan
@@ -102,7 +137,7 @@ Invited to \emph{INFORMS Annual Meeting 2022}.
 
 \medskip{}
 
-\textbf{Dynamic Car Dispatching and Pricing: Revenue and Fairness
+\iA4M\textbf{Dynamic Car Dispatching and Pricing: Revenue and Fairness
 for Ridesharing Platforms }\href{https://arxiv.org/abs/2207.06318}{[Link]}
 
 \uline{Zishuo Zhao}, Xi Chen, Xuefeng Zhang, Yuan Zhou
@@ -114,7 +149,7 @@ Invited to \emph{INFORMS Annual Meeting 2021}.
 
 \medskip{}
 
-\textbf{ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering
+\iEAI\textbf{ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering
 and Motion Estimation }\href{http://wiku30.xyz/2019/5594.pdf}{[Link]}
 
 Jiahui Huang, Sheng Yang, \uline{Zishuo Zhao}, Yukun Lai, Shi-Min
@@ -124,7 +159,7 @@ Hu.
 
 \subsection{Working Projects}
 
-\textbf{Proof-of-Learning with Incentive Security}
+\iM4A\textbf{Proof-of-Learning with Incentive Security}
 
 \uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Yuan Zhou
 
@@ -132,13 +167,13 @@ Presented on INFORMS Annual Meeting 2023.
 
 \medskip{}
 
-\textbf{Incentive-Aware Dynamic Auction for Budgeted Bidders}
+\iA4M\textbf{Incentive-Aware Dynamic Auction for Budgeted Bidders}
 
 David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}. (alphabetical order)
 
 \medskip{}
 
-\textbf{Peer Prediction for Verifier's Dilemma}
+\iM4A\textbf{Peer Prediction for Verifier's Dilemma}
 
 \emph{(Collaborators TBA)}
 
@@ -186,6 +221,7 @@ Tsinghua University, 2016.
 \begin{itemize}
 \item Mandarin Chinese (native)
 \item English (fluent)
+\item Classical Chinese (writing as a hobby)
 \end{itemize}
 
 \subsection{Extracurricular Activities}
