--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -68,7 +68,8 @@ Systems Engineering, \\
 University of Illinois Urbana-Champaign\\
 Research Area: Operations Research\\
 Advisor: Yuan Zhou\\
-Expected Graduation: Summer 2025
+Expected Graduation: Summer 2025\\
+Tentative Thesis Title: \emph{Reliable and Sustainable Design for Digital Economic Platforms} 
 \item \textbf{2020/08 - 2021/01 }Research Assistant, Haihua Institute for
 Frontier Information Technology
 \item \textbf{2016/05 - 2020/07} Undergraduate student, Institute
