--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -180,7 +180,7 @@ David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}. (alphabetical order)
 
 \textbf{Peer Prediction for Verifier's Dilemma} \M4A
 
-\emph{(Collaborators TBA)}
+\emph{(an interest-driven project, collaborators TBA)}
 
 
 \section{Academic Activities}
