--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -80,7 +80,7 @@ Science and Technology, Tsinghua University
 
 \section{Research Interests}
 
-I am a fourth-year PhD student in UIUC, majoring in operations research,
+I am a fourth-year PhD candidate in UIUC, majoring in operations research,
 and currently doing research in mechanism design. In general, my research
 interests span a wide scope related to incentive-aware design and optimization for
 emerging applications in digital economy, including blockchain systems,
@@ -114,7 +114,15 @@ embodied AI~\EAI
 %\setlength\parindent{24pt}
 %\hangindent 24pt
 
-\subsection{Publications}
+\subsection{Publications and Preprints}
+
+\textbf{Proof-of-Learning with Incentive Security} \M4A \SUS ~\href{https://arxiv.org/abs/2404.09005}{[Link]}
+
+\uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Yuan Zhou
+
+Presented on INFORMS Annual Meeting 2023. \emph{In Submission.}
+
+\medskip{}
 
 \textbf{Personalized Pricing with Group Fairness Constraint} \A4M \SUS~\href{https://dl.acm.org/doi/10.1145/3593013.3594097}{[Link]}
 
@@ -153,7 +161,7 @@ for Ridesharing Platforms } \A4M \SUS~\href{https://arxiv.org/abs/2207.06318}{[L
 Invited to \emph{INFORMS Annual Meeting 2021}.
 
 \medskip{}
-
+\newpage
 \textbf{ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering
 and Motion Estimation} \EAI~\href{http://wiku30.xyz/2019/5594.pdf}{[Link]}
 
@@ -164,13 +172,7 @@ Hu.
 
 \subsection{Working Projects}
 
-\textbf{Proof-of-Learning with Incentive Security} \M4A \SUS
 
-\uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Yuan Zhou
-
-Presented on INFORMS Annual Meeting 2023.
-
-\medskip{}
 
 \textbf{Incentive-Aware Dynamic Auction for Budgeted Bidders} \A4M
 
@@ -243,6 +245,6 @@ Java, PHP.
 \item Open to learn new programming languages when in need.
 \end{itemize}
 \begin{flushright}
-\emph{(Updated on Mar 16, 2024)}
+\emph{(Updated on Apr 16, 2024)}
 \par\end{flushright}
 \end{document}
