--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -118,9 +118,11 @@ embodied AI~\EAI
 
 \textbf{Proof-of-Learning with Incentive Security} \M4A \SUS ~\href{https://arxiv.org/abs/2404.09005}{[Link]}
 
-\uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Yuan Zhou
+\uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Xi Chen, Yuan Zhou
 
-Presented on INFORMS Annual Meeting 2023. \emph{In Submission.}
+A preliminary version presented on INFORMS Annual Meeting 2023. 
+
+\emph{In Submission (April 2024).}
 
 \medskip{}
 
@@ -245,6 +247,6 @@ Java, PHP.
 \item Open to learn new programming languages when in need.
 \end{itemize}
 \begin{flushright}
-\emph{(Updated on Apr 16, 2024)}
+\emph{(Updated on Apr 30, 2024)}
 \par\end{flushright}
 \end{document}
