--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -68,7 +68,7 @@ Systems Engineering, \\
 University of Illinois Urbana-Champaign\\
 Research Area: Operations Research\\
 Advisor: Yuan Zhou\\
-Expected Graduation: Summer 2025\\
+Expected Graduation: Summer 2026\\
 Tentative Thesis Title: \emph{Reliable and Sustainable Design for Digital Economic Platforms} 
 \item \textbf{2020/08 - 2021/01 }Research Assistant, Haihua Institute for
 Frontier Information Technology
@@ -88,6 +88,10 @@ e-commerce, ridesharing platforms and so on. I am also interested in data-driven
 mechanism design based on statistical/online learning, and topics in cryptography 
 and distributed systems with applications in blockchain.
 
+Particularly, I am recently interested in the exploration into a novel paradigm of \emph{incentive security}
+on blockchain-based platforms, which aims to combine game-theoretic and systematic/cryptographic methodologies
+to prevent dishonest behavior of \emph{untrusted but rational} parties.
+
 On a very high level, my (starry-eyed) dream for research lies in the following 
 fields, which are also the topics I am most actively working on:
 
@@ -95,7 +99,7 @@ fields, which are also the topics I am most actively working on:
     \item \textbf{AI for mechanism design~\A4M}: e.g., using data-driven methods to 
     improve the performance of economic platforms.
     \item \textbf{Mechanism design for AI~\M4A}: e.g., using economic incentives to 
-    reinforce the efficiency and security of AI systems.
+    reinforce the efficiency and security of AI systems, especially on the blockchain platform.
     \item \textbf{Sustainability in AI \& Economy~\SUS}: e.g. using interdisciplinary
     methodologies to foster long-term social welfare and environmental friendliness
     for new-era AI and economic platforms. 
@@ -152,6 +156,8 @@ Invited to \emph{INFORMS Annual Meeting 2022}.
 
 \medskip{}
 
+\newpage
+
 \textbf{Dynamic Car Dispatching and Pricing: Revenue and Fairness
 for Ridesharing Platforms } \A4M \SUS~\href{https://arxiv.org/abs/2207.06318}{[Link]}
 
@@ -163,7 +169,7 @@ for Ridesharing Platforms } \A4M \SUS~\href{https://arxiv.org/abs/2207.06318}{[L
 Invited to \emph{INFORMS Annual Meeting 2021}.
 
 \medskip{}
-\newpage
+
 \textbf{ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering
 and Motion Estimation} \EAI~\href{http://wiku30.xyz/2019/5594.pdf}{[Link]}
 
@@ -187,13 +193,7 @@ David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}. (alphabetical order)
 \emph{(an interest-driven project, collaborators TBA)}
 
 
-\section{Academic Activities}
-\begin{itemize}
-\item Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
-\item Facilitator in section Revenue \& Pricing, INFORMS Annual Meeting, 2021.
-\item Invited to the Alumni Forum for the 10th Anniversary of IIIS,
-Tsinghua University in 2021.
-\end{itemize}
+
 
 \section{Awards}
 
@@ -224,6 +224,15 @@ Tsinghua University, 2016.
     \item Third Prize in the Art Festival of No.1 Middle School affiliated to CCNU, 2013. 
 \end{itemize}
 
+\section{Academic Activities}
+\begin{itemize}
+\item Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
+\item Facilitator in section Revenue \& Pricing, INFORMS Annual Meeting, 2021.
+\item Invited to the Alumni Forum for the 10th Anniversary of IIIS,
+Tsinghua University in 2021.
+\item Conference reviewing: ESA 2024.
+\end{itemize}
+
 \section{Miscellaneous}
 
 \subsection{Languages}
@@ -236,7 +245,8 @@ Tsinghua University, 2016.
 \subsection{Extracurricular Activities}
 \begin{itemize}
 \item I have an amateur interest in Capture-The-Flag (CTF) competitions, and developed two Reverse challenges in the TQLCTF 2022.
-\item I have a wide scope of hobbies in arts and aerobic sports, especially in vocal music, photography, piano, table tennis and orienteering. Particularly, my photographs ``梦影(\textit{Dreamland Impression})'' and ``$2\pi i$'' won the Finalist Award in the photography exhibition for the 12th Anniversary of IIIS, Tsinghua University in 2023.
+\item I have a wide scope of hobbies in arts and aerobic sports, especially in vocal music, photography, piano, table tennis and orienteering. 
+%Particularly, my photographs ``梦影(\textit{Dreamland Impression})'' and ``$2\pi i$'' won the Finalist Award in the photography exhibition for the 12th Anniversary of IIIS, Tsinghua University in 2023.
 \end{itemize}
 
 \subsection{Coding Skills}
@@ -247,6 +257,6 @@ Java, PHP.
 \item Open to learn new programming languages when in need.
 \end{itemize}
 \begin{flushright}
-\emph{(Updated on Apr 30, 2024)}
+\emph{(Updated on May 5, 2024)}
 \par\end{flushright}
 \end{document}
